<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2018 Shobhit Agarwal

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginTop="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <!-- Toolbar -->
    <include layout="@layout/toolbar" />

    <include
        layout="@layout/toolbar_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar" />

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/main_menu_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="62dp"
            android:text="@string/app_name"
            android:textColor="?primaryTextColor"
            android:textSize="21sp"
            android:textStyle="bold"/>
        <TextView
            android:text="@string/about_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:text="@string/about_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:text="@string/about_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:text="@string/about_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="20px">
        <ImageView
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_weight="1"
            app:srcCompat="@drawable/LogoCARE"/>
        <ImageView
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_weight="1"
            android:src="@drawable/LogoCIRUM"/>
        <ImageView
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_weight="1"
            android:src="@drawable/LogoGFD"/>
        <ImageView
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_weight="1"
            android:src="@drawable/LogoWarecod"/>
    </LinearLayout>
</RelativeLayout>